--- a/MacroRecursion.csproj
+++ b/MacroRecursion.csproj
@@ -10,12 +10,12 @@
         <OutputPath></OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <DebugSymbols>true</DebugSymbols>
-        <DebugType>Portable</DebugType>
+        <DebugType>Full</DebugType>
         <DocumentationFile></DocumentationFile>
     </PropertyGroup>
     <PropertyGroup Label="Feature">
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	    <Version>1.1.2.1</Version>
+	    <Version>2.0.0.0</Version>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <AppOutputBase>$(MSBuildProjectDirectory)\</AppOutputBase>
@@ -25,13 +25,26 @@
     <PropertyGroup>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <AssemblyName>MacroRecursionNoDeps</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Dalamud">
-          <HintPath>$(AppData)\XIVLauncher\addon\Hooks\Dalamud.dll</HintPath>
+          <Private>false</Private>
+          <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Dalamud.dll</HintPath>
         </Reference>
     </ItemGroup>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="cd $(ProjectDir)$(OutDir)&#xD;&#xA;for %25%25i in (*.*) do if not &quot;%25%25i&quot;==&quot;$(TargetName).dll&quot; if not &quot;%25%25i&quot;==&quot;$(TargetName).pdb&quot; del /q &quot;%25%25i&quot;&#xD;&#xA;if $(ConfigurationName) == Release (&#xD;&#xA;  powershell New-Item -ItemType Directory -Force -Path '$(ProjectDir)Publish'&#xD;&#xA;  powershell Compress-Archive -Path '$(TargetPath)','$(ProjectDir)$(ProjectName).json','$(ProjectDir)$(OutDir)$(TargetName).pdb' -DestinationPath '$(ProjectDir)Publish\latest.zip' -Force&#xD;&#xA;  echo F|xcopy &quot;$(ProjectDir)$(ProjectName).json&quot; &quot;$(ProjectDir)Publish\$(ProjectName).json&quot; /Y /F&#xD;&#xA;)" />
+    <ItemGroup>
+      <ProjectReference Include="..\SimpleTweaksPlugin\FFXIVClientInterface\FFXIVClientInterface.csproj" />
+      <ProjectReference Include="..\SimpleTweaksPlugin\lib\FFXIVClientStructs\FFXIVClientStructs.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="ILMerge" Version="3.0.41" />
+    </ItemGroup>
+    <Target Name="ILMerge" AfterTargets="PostBuildEvent">
+        <!-- Merge and rename -->
+        <Exec Command="$(ILMergeConsolePath) /target:library /out:$(TargetDir)/../MacroRecursion.dll /log /lib:$(APPDATA)\XIVLauncher\addon\Hooks\dev $(TargetDir)MacroRecursionNoDeps.dll $(TargetDir)FFXIVClientStructs.dll $(TargetDir)FFXIVClientInterface.dll&#xD;&#xA;powershell -Command &quot;Remove-Item '$(TargetDir)\*.*';Move-Item '$(TargetDir)\..\MacroRecursion.*' -Destination '$(TargetDir)';&quot;" />
+    </Target>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Configuration)'=='Release'">
+        <Exec Command="powershell -Command &quot;New-Item -ItemType Directory -Force -Path '$(ProjectDir)Publish'; $a=Get-Item '$(TargetDir)MacroRecursion.dll'; $jsonTemplate=Get-Content '$(ProjectDir)\$(ProjectName).template.json' | ConvertFrom-Json; $jsonTemplate.AssemblyVersion=$a.VersionInfo.FileVersion; $jsonTemplate.Description = $jsonTemplate.Description -join '\n'; ($jsonTemplate | ConvertTo-Json).Replace('\\n','\n') | Out-File '$(ProjectDir)\Publish\$(ProjectName).json' -Encoding utf8;Compress-Archive -Path '$(ProjectDir)\Publish\$(ProjectName).json','$(TargetDir)\*' -DestinationPath '$(ProjectDir)Publish\latest.zip' -Force&quot;" />
     </Target>
 </Project>
