--- a/MacroChain.csproj
+++ b/MacroChain.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup Label="Target">
         <PlatformTarget>x64</PlatformTarget>
         <TargetFramework>net7.0-windows</TargetFramework>
-        <LangVersion>8.0</LangVersion>
+        <LangVersion>latest</LangVersion>
         <Platforms>x64</Platforms>
         <Configurations>Debug;Release</Configurations>
         <RootNamespace>MacroChain</RootNamespace>
@@ -15,7 +15,7 @@
     </PropertyGroup>
     <PropertyGroup Label="Feature">
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>2.1.0.5</Version>
+        <Version>2.1.1.0</Version>
     </PropertyGroup>
     <PropertyGroup>
 		<AssemblyName>MacroChain</AssemblyName>
@@ -40,7 +40,7 @@
         <None Remove="lib\**" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.10" />
+        <PackageReference Include="DalamudPackager" Version="2.1.12" />
     </ItemGroup>
     <Target Name="PackagePlugin" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
         <DalamudPackager ProjectDir="$(ProjectDir)" OutputPath="$(OutputPath)" AssemblyName="$(AssemblyName)" MakeZip="true" />
