--- a/MacroChain.csproj
+++ b/MacroChain.csproj
@@ -1,8 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Dalamud.NET.Sdk/11.0.0">
     <PropertyGroup Label="Target">
-        <PlatformTarget>x64</PlatformTarget>
-        <TargetFramework>net8.0-windows</TargetFramework>
-        <LangVersion>latest</LangVersion>
         <Platforms>x64</Platforms>
         <Configurations>Debug;Release</Configurations>
         <RootNamespace>MacroChain</RootNamespace>
@@ -15,34 +12,15 @@
     </PropertyGroup>
     <PropertyGroup Label="Feature">
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>2.2.0.0</Version>
+        <Version>2.2.1.0</Version>
     </PropertyGroup>
     <PropertyGroup>
 		<AssemblyName>MacroChain</AssemblyName>
-        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-        <DalamudLibPath>$(AppData)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
 	</PropertyGroup>
-    <ItemGroup>
-        <Reference Include="Dalamud">
-            <Private>false</Private>
-            <HintPath>$(DalamudLibPath)\Dalamud.dll</HintPath>
-        </Reference>
-        <Reference Include="FFXIVClientStructs">
-            <Private>false</Private>
-            <HintPath>$(DalamudLibPath)\FFXIVClientStructs.dll</HintPath>
-        </Reference>
-    </ItemGroup>
+
     <ItemGroup>
         <Compile Remove="lib\**" />
         <EmbeddedResource Remove="lib\**" />
         <None Remove="lib\**" />
     </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.13" />
-    </ItemGroup>
-    <Target Name="PackagePlugin" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
-        <DalamudPackager ProjectDir="$(ProjectDir)" OutputPath="$(OutputPath)" AssemblyName="$(AssemblyName)" MakeZip="true" />
-    </Target>
 </Project>
