--- a/MacroChain.csproj
+++ b/MacroChain.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup Label="Target">
         <PlatformTarget>x64</PlatformTarget>
-        <TargetFramework>net8.0-windows</TargetFramework>
+        <TargetFramework>net9.0-windows</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Platforms>x64</Platforms>
         <Configurations>Debug;Release</Configurations>
@@ -15,7 +15,7 @@
     </PropertyGroup>
     <PropertyGroup Label="Feature">
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>2.2.0.1</Version>
+        <Version>2.2.0.2</Version>
     </PropertyGroup>
     <PropertyGroup>
 		<AssemblyName>MacroChain</AssemblyName>
@@ -33,6 +33,10 @@
             <Private>false</Private>
             <HintPath>$(DalamudLibPath)\FFXIVClientStructs.dll</HintPath>
         </Reference>
+        <Reference Include="InteropGenerator.Runtime">
+            <Private>false</Private>
+            <HintPath>$(DalamudLibPath)InteropGenerator.Runtime.dll</HintPath>
+        </Reference>
     </ItemGroup>
     <ItemGroup>
         <Compile Remove="lib\**" />
@@ -40,7 +44,7 @@
         <None Remove="lib\**" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="11.0.0" />
+        <PackageReference Include="DalamudPackager" Version="12.0.0" />
     </ItemGroup>
     <Target Name="PackagePlugin" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
         <DalamudPackager ProjectDir="$(ProjectDir)" OutputPath="$(OutputPath)" AssemblyName="$(AssemblyName)" MakeZip="true" />
